--- a/views/reversed.erb
+++ b/views/reversed.erb
@@ -10,6 +10,6 @@
     <h1>The Ultimate Reversed String!</h1>
 
     <!--   Use ERB tags to bring in an instance variable containing the reversed string -->
-    params.to_s
+    <p>params.to_s</p>
   </body>
 </html>
