--- a/views/reversed.erb
+++ b/views/reversed.erb
@@ -10,6 +10,6 @@
     <h1>The Ultimate Reversed String!</h1>
 
     <!--   Use ERB tags to bring in an instance variable containing the reversed string -->
-    <p></p>
+    <h2><%= @reverse_string %></h2>
   </body>
 </html>
