--- a/views/friends.erb
+++ b/views/friends.erb
@@ -10,8 +10,8 @@
     <h1>My Super Cool Friends List</h1>
 
     <!-- Iterate through the @friends array here to display each item in its own <h2> tag -->
-    <% @friends.each do |friend| <%> 
-      <h1> </h1>
-      <
+    <% @friends.each do |friend| <%>
+      <h1>Hello <%=friend%>.</h1>
+      <% end %>
   </body>
 </html>
